--- a/performance_review_client/package.json
+++ b/performance_review_client/package.json
@@ -39,6 +39,7 @@
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
     "redux-form": "^6.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "request": "^2.79.0"
   }
 }
